--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
                   <input type="number" class="form-control" id="valor" name="valor" step="0.01" min="0" inputmode="decimal" required>
                   <div class="invalid-feedback">Informe um valor válido.</div>
                 </div>
+                <div class="mb-3">
+                  <label for="quemPagou" class="form-label">Quem pagou</label>
+                  <select class="form-select" id="quemPagou" name="quemPagou" required>
+                    <option value="" selected>Selecione...</option>
+                    <option value="Matheus">Matheus</option>
+                    <option value="Ana">Ana</option>
+                  </select>
+                  <div class="invalid-feedback">Selecione quem pagou.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="metodoPagamento" class="form-label">Método de pagamento</label>
+                  <select class="form-select" id="metodoPagamento" name="metodoPagamento" required>
+                    <option value="" selected>Selecione...</option>
+                    <option value="Pix">Pix</option>
+                    <option value="Crédito">Crédito</option>
+                    <option value="Débito">Débito</option>
+                    <option value="Dinheiro">Dinheiro</option>
+                  </select>
+                  <div class="invalid-feedback">Selecione o método de pagamento.</div>
+                </div>
                 <div class="d-grid">
                   <button type="submit" class="btn btn-primary">Salvar</button>
                 </div>
@@ -116,6 +136,24 @@
                 <label for="filtroValorMax" class="form-label">Valor máximo</label>
                 <input type="number" id="filtroValorMax" class="form-control" step="0.01" min="0">
               </div>
+              <div class="col-6 col-md-3">
+                <label for="filtroQuemPagou" class="form-label">Quem pagou</label>
+                <select id="filtroQuemPagou" class="form-select">
+                  <option value="">Todos</option>
+                  <option value="Matheus">Matheus</option>
+                  <option value="Ana">Ana</option>
+                </select>
+              </div>
+              <div class="col-6 col-md-3">
+                <label for="filtroMetodoPagamento" class="form-label">Método</label>
+                <select id="filtroMetodoPagamento" class="form-select">
+                  <option value="">Todos</option>
+                  <option value="Pix">Pix</option>
+                  <option value="Crédito">Crédito</option>
+                  <option value="Débito">Débito</option>
+                  <option value="Dinheiro">Dinheiro</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
@@ -136,6 +174,8 @@
                     <th>Descrição</th>
                     <th class="d-none d-md-table-cell">Local</th>
                     <th>Categoria</th>
+                    <th class="d-none d-lg-table-cell">Quem pagou</th>
+                    <th class="d-none d-lg-table-cell">Método</th>
                     <th class="text-end">Valor (R$)</th>
                   </tr>
                 </thead>
