--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
                   <label for="categoria" class="form-label">Categoria</label>
                   <select class="form-select" id="categoria" name="categoria" required>
                     <option value="" selected>Selecione...</option>
-                    <option value="Mercado">Mercado</option>
-                    <option value="Farmácia">Farmácia</option>
-                    <option value="Combustível">Combustível</option>
-                    <option value="Lanche">Lanche</option>
-                    <option value="Almoço fora">Almoço fora</option>
+                    <!-- Opções de categorias serão carregadas dinamicamente -->
                     <option value="Outros">Outros</option>
                   </select>
                   <div class="invalid-feedback">Selecione uma categoria.</div>
@@ -103,7 +99,13 @@
                   <input type="file" id="importJson" class="form-control" accept="application/json">
                 </div>
                 <div class="col-12 col-md-6 d-grid">
-                  <button id="exportJson" class="btn btn-outline-secondary">Exportar JSON</button>
+                  <button id="exportJson" class="btn btn-outline-secondary">Exportar Contas</button>
+                </div>
+                <div class="col-12 col-md-6 d-grid">
+                  <button id="exportCategorias" class="btn btn-outline-secondary">Exportar Categorias</button>
+                </div>
+                <div class="col-12 col-md-6 d-grid">
+                  <button id="exportPdf" class="btn btn-outline-secondary">Exportar PDF</button>
                 </div>
                 <div class="col-12 d-grid mt-2">
                   <button id="syncFile" class="btn btn-outline-primary">Sincronizar com arquivo (opcional)</button>
@@ -177,6 +179,7 @@
                     <th class="d-none d-lg-table-cell">Quem pagou</th>
                     <th class="d-none d-lg-table-cell">Método</th>
                     <th class="text-end">Valor (R$)</th>
+                    <th class="text-end">Ações</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -195,6 +198,9 @@
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- jsPDF e AutoTable (para geração de PDF) -->
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.1/dist/jspdf.plugin.autotable.min.js" defer></script>
     <!-- App Scripts (modular) -->
     <script type="module" src="/public/js/app.js"></script>
   </body>
